--- a/index.html
+++ b/index.html
@@ -570,10 +570,10 @@
                         <h1 class="heading"> Família GeForce RTX 3090</h1>
                     </div>
                     <div class="filter-btns">
-                        <button class="filter-btn" data-filter="all">Todos</button>
+                        <button class="filter-btn" data-filter="all">Tecnologia</button>
                         <button class="filter-btn" data-filter=".product">Produtos</button>
-                        <button class="filter-btn" data-filter=".inter">Desenvolvimento</button>
-                        <button class="filter-btn" data-filter=".web">Web App</button>
+                        <button class="filter-btn" data-filter=".inter">Games</button>
+                        <button class="filter-btn" data-filter=".web">Realidade Virtual</button>
                     </div>
                 </div>
                 <div class="portfolio-gallery">
@@ -758,7 +758,7 @@
                     <h3>Send me a message</h3>
                     <input type="text" class="form-input" placeholder="Nome" required>
                     <input type="email" class="form-input" placeholder="Email" required>
-                    <textarea placeholder="Detalhes do Projeto" class="form-input" required></textarea>
+                    <textarea placeholder="Detalhes do Produto" class="form-input" required></textarea>
                     <input type="submit" value="Enviar" class="btn">
                 </form>
             </div>
@@ -770,7 +770,7 @@
                 <div class="sub-box">
                     <img src="./assets/square2.png" class="shape square">
                     <div class="sub-info">
-                        <h3 class="sub-heading">Boletim de Notícias</h3>
+                        <h3 class="sub-heading">Atualizações</h3>
                         <h1 class="heading">Receba novidades sobre nossos produtos</h1>
                         <p class="text">
                             É Hora de Fazer Seu Upgrade
